# RST

./: .gitignore  LICENSE  README.md
BaseDemo/Other/datatype/src/: main.rs
BaseDemo/Other/flowdemo/: Cargo.toml
BaseDemo/Other/flowdemo/src/: main.rs
BaseDemo/Other/funcs/src/: extension.rs  main.rs
BaseDemo/Other/vars/src/: main.rs
BaseDemo/cllectdemo/: Cargo.toml
BaseDemo/cllectdemo/src/: cllectutil.rs  hashmaputil.rs  main.rs  strutil.rs  traitutil.rs  vectorutil.rs
BaseDemo/cllectdemo/src/traitutil/: lifeutil.rs  traitimpl.rs
BaseDemo/file_demo/: Cargo.toml  json.json  toml.toml  tst.txt
BaseDemo/file_demo/logs/: log.txt  log_20241019.restart-0000.txt  log_20241019.txt
BaseDemo/file_demo/src/: main.rs
BaseDemo/hello_rust/: Cargo.toml
BaseDemo/hello_rust/src/: main.rs
BaseDemo/mod/bytedemo/: Cargo.toml
BaseDemo/mod/bytedemo/src/: extensions.rs  main.rs
BaseDemo/mod/bytedemo/src/extensions/: discacheutil.rs  mysqlutil.rs
BaseDemo/mod/libdemo/: Cargo.toml
BaseDemo/mod/libdemo/src/: lib.rs  tcudp.rs
BaseDemo/mod/libdemo/src/tcudp/: sock.rs  tcputil.rs  udputil.rs
BaseDemo/mqdemo/: Cargo.toml
BaseDemo/mqdemo/src/: main.rs
BaseDemo/ownerapp/: Cargo.toml
BaseDemo/ownerapp/src/: main.rs
BaseDemo/ownerdemo/: Cargo.toml
BaseDemo/ownerdemo/src/: main.rs
BaseDemo/strctdemo/: Cargo.toml
BaseDemo/strctdemo/src/: enums.rs  main.rs  mtchs.rs
BaseDemo/tcudp_demo/: Cargo.toml
BaseDemo/tcudp_demo/src/: main.rs
BaseDemo/tcupd_demo/: Cargo.toml
Common/CacheExtensionLib/: Cargo.toml
Common/CacheExtensionLib/src/: lib.rs  rscaches.rs
Common/CacheExtensionLib/src/rscaches/: rdscache.rs
Common/CfgExtensionLib/: Cargo.toml
Common/CfgExtensionLib/src/: cfgutil.rs  lib.rs  rsfile.rs
Common/CommonExtensionLib/: Cargo.toml
Common/CommonExtensionLib/src/: lib.rs  mdls.rs  rslogs.rs  utils.rs
Common/CommonExtensionLib/src/mdls/: kvmdl.rs
Common/CommonExtensionLib/src/rslogs/: ftaillog.rs  selflog.rs
Common/CommonExtensionLib/src/utils/: cache_util.rs  jwtutil.rs  local_cache.rs  logutil.rs  secutil.rs
Common/DataExtensionLib/: Cargo.toml  cfg.toml
Common/DataExtensionLib/src/: cfg.rs  clkhouseLib.rs  datasqlx.rs  lib.rs  mysqlLib.rs
Common/DataExtensionLib/src/datasqlx/: mysqlx.rs  sqlitex.rs
Common/MQExtensionLib/: Cargo.toml
Common/MQExtensionLib/src/: lib.rs  mqs.rs  rsmqs.rs
Common/MQExtensionLib/src/mqs/: rs_kfk.rs
Common/TcudpLib/: Cargo.toml
Common/TcudpLib/src/: lib.rs  tcudp.rs
Common/TcudpLib/src/tcudp/: rstcp.rs  rsudp.rs
NXT/nxt_back/: Cargo.toml
NXT/nxt_back/src/: bll.rs  ext.rs  main.rs  mdl.rs  rsapi.rs
NXT/nxt_back/src/bll/: sysbll.rs
NXT/nxt_back/src/bll/sysbll/: usrbll.rs
NXT/nxt_back/src/ext/: auth_ext.rs  swag_ui.rs
NXT/nxt_back/src/mdl/: basemdl.rs  blkmdl.rs  sysmdl.rs
NXT/nxt_back/src/mdl/blkmdl/: recordmdl.rs
NXT/nxt_back/src/mdl/sysmdl/: usermdl.rs
NXT/nxt_back/src/rsapi/: blkapi.rs  sysapi.rs
NXT/nxt_back/src/rsapi/blkapi/: dial_record.rs
NXT/nxt_back/src/rsapi/sysapi/: user.rs
NXT/nxt_front/: .env.development  .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
NXT/nxt_front/src/: main.ts
NXT/nxt_front/src/assets/: main.css
NXT/nxt_front/src/assets/iconfont/: iconfont.css
NXT/nxt_front/src/router/: index.ts
NXT/nxt_front/src/router/mdl/: ai_router.ts  blk_router.ts  sys_router.ts  voice_router.ts
NXT/nxt_front/src/stores/: glbStore.ts
NXT/nxt_front/src/utils/: animal.ts  axiosUtil.ts  interceptorUtil.ts  reqUtil.ts
NXT/nxt_front/src/views/: home.vue  lg.vue  main.vue
RealPrj/RstIM/: Cargo.toml
RealPrj/RstimLib/: Cargo.toml
Web/Actixweb_Admin/: Cargo.toml
Web/Actixweb_Admin/src/: authExt.rs  auth_util.rs  bll.rs  main.rs  mdl.rs  opdoc.rs
Web/Actixweb_Admin/src/bll/: sysbll.rs
Web/Actixweb_Admin/src/mdl/: sysmdl.rs
Web/Actixweb_Admin/src/mdl/sysmdl/: usermdl.rs
Web/Actixweb_Admin/src/selfapi/: sys.rs
Web/Actixweb_Admin/src/selfapi/sys/: cfgapi.rs  menuapi.rs  orgapi.rs  permissionapi.rs  roleapi.rs  userapi.rs
Web/Actixweb_Open/: Cargo.toml
wx_xcx/custom-tab-bar/: index.js  index.wxml  index.wxss
wx_xcx/pages/custom-tab-bar/: index.wxss
wx_xcx/pages/index/: index.js  index.wxml
wx_xcx/xcx002/: app - 副本.json  app.js  app.json  app.wxss  package-lock.json  package.json  project.config.json  project.private.config.json
wx_xcx/xcx002/childs/dyvd/: dyvd.js  dyvd.wxml
wx_xcx/xcx002/childs/shp/: shp.js  shp.wxml
wx_xcx/xcx002/childs/vd/: vd.js  vd.wxml
wx_xcx/xcx002/childs/zb/: zb.js  zb.json  zb.wxml  zb.wxss
wx_xcx/xcx002/childs/zbgrp/: zbgrp.js  zbgrp.json  zbgrp.wxml  zbgrp.wxss
wx_xcx/xcx002/childs/zbopt/: zbopt.js  zbopt.wxml  zbopt.wxss
wx_xcx/xcx002/components/navigation-bar/: navigation-bar.js  navigation-bar.wxml  navigation-bar.wxss
wx_xcx/xcx002/custom-tab-bar/: index.js  index.wxml  index.wxss
wx_xcx/xcx002/iconfont/: iconfont.wxss
wx_xcx/xcx002/index/: index.js  index.wxml  index.wxss
wx_xcx/xcx002/mine/: mine.js  mine.json  mine.wxml  mine.wxss
wx_xcx/xcx002/pages/index/: index.wxml
wx_xcx/xcx002/rank/: rank.js  rank.json  rank.wxml  rank.wxss
wx_xcx/xcx002/resources/iconfont/: iconfont - 副本.css  iconfont.js  iconfont.json  iconfont.wxss
wx_xcx/xcx002/shp/: shp.js  shp.json  shp.wxml  shp.wxss
wx_xcx/xcx002/utils/: md5.js  util.js
