[package]
name = "file_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CfgExtensionLib = { path = "../../Common/CfgExtensionLib" }
CommonExtensionLib = { path = "../../Common/CommonExtensionLib" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
