[package]
name = "CommonExtensionLib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["unstable-locales"] }
chrono-tz = "0.10.0"
flexi_logger = {version="0.29.3", features = ["async", "specfile", "compress"]}
ftail = { version = "0.1.2", features = ["timezone"] }
jsonwebtoken = "9.3.0"
log = "0.4.22"
md5 = "0.7.0"
moka = { version = "0.12.8", features = ["future"] }
once_cell = "1.20.2"
serde = "1.0.204"
tokio = { version = "1.40.1", features = ["full"] }
