[package]
name = "DataExtensionLib"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "25.0.1"  # mysql driver , "macros"
sqlx = { version = "0.8.2", features = ["mysql", "sqlite", "runtime-tokio", "tls-native-tls"] }
mongodb = "3.1.1" # mongodb driver
clickhouse = { version = "0.13.1", features = ["test-util","inserter"] } # clickhouse driver
tiberius = "0.12.3"  # SQL Server
tokio = { version = "1.42.0", features = ["full"] } # async runtime
tokio-postgres = "0.7.12"  # postgres driver
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
# time = "0.3.37"
# serde_with = "3.12.0"
time = { version = "0.3.37", features = ["serde","macros"] }
chrono = {version="0.4.39", features = ["serde"]}
# time = { version = "0.3.37", features = ["macros", "rand"] }
# rusqlite = { version = "0.31.0", features = ["bundled"] }  # sqlite driver
