[package]
name = "nxt_back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version="0.4.39", features = ["serde"]}
log = "0.4.22"
CfgExtensionLib = {path = "../../Common/CfgExtensionLib"}
DataExtensionLib = {path = "../../Common/DataExtensionLib"}
CacheExtensionLib = {path = "../../Common/CacheExtensionLib"}
CommonExtensionLib = {path = "../../Common/CommonExtensionLib"}
MQExtensionLib = {path = "../../Common/MQExtensionLib"}
serde = {version="1.0.217", features = ["derive"]}
serde_json = { version = "1.0.134", default-features = false, features = ["alloc"] }
utoipa = {version="5.3.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version="8.1.0", features = ["actix-web"]}
actix-cors = "0.7.0"
sqlx = { version = "0.8.2", features = ["mysql", "sqlite", "chrono", "runtime-tokio", "tls-native-tls"] }
clickhouse = "0.13.1" # clickhouse driver
# serde_json = "1.0.134"
# serde_repr = "0.1.19"
# time = { version = "0.3.37", optional = true }
# rand = { version = "0.8.5", features = ["small_rng"] }
# time = { version = "0.3.37", features = ["macros", "rand"] }

