[package]
name = "Actixweb_Admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mysql = "25.0.1"  # mysql driver
DataExtensionLib = { path = "../../Common/DataExtensionLib" }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
chrono = "0.4.38"
