[package]
name = "Actixweb_Admin"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "25.0.1"  # mysql driver
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
DataExtensionLib = { path = "../../Common/DataExtensionLib" }
CommonExtensionLib = { path = "../../Common/CommonExtensionLib" }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["actix-web"] }
chrono = "0.4.38"
actix-web = "4.9.0"
